tests/sout/linenum2.eqx.out
testing error/1 25 
Error occurred at line: 4
  002.  
  003.  : my-abort ( -- )
=>004.    "test" >p error 1 ;
  005.  
  006.  2 3 + dup * . cr

