tests/sout/linenum2.eqx
"testing error/1" .

: my-abort ( -- )
  "test" >p error 1 ;

2 3 + dup * . cr

my-abort


